--- a/index.html
+++ b/index.html
@@ -1,3 +1,65 @@
-poppy<br>
+<!DOCTYPE html>
+<html lang=en>
+<head>
+	<title>poppys website leaver-smith</title>
+	<style type="text/css">
+		p,h1{color:fuchsia;}
+		.wrapper { 
+  height: 100%;
+  width: 100%;
+  left:0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  position: absolute;
+background: linear-gradient(124deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3);
+background-size: 1800% 1800%;
 
-* <a href=https://whatpoppydid.wordpress.com>My blog</a> (no longer updated)
+-webkit-animation: rainbow 18s ease infinite;
+-z-animation: rainbow 18s ease infinite;
+-o-animation: rainbow 18s ease infinite;
+  animation: rainbow 18s ease infinite;}
+
+@-webkit-keyframes rainbow {
+    0%{background-position:0% 82%}
+    50%{background-position:100% 19%}
+    100%{background-position:0% 82%}
+}
+@-moz-keyframes rainbow {
+    0%{background-position:0% 82%}
+    50%{background-position:100% 19%}
+    100%{background-position:0% 82%}
+}
+@-o-keyframes rainbow {
+    0%{background-position:0% 82%}
+    50%{background-position:100% 19%}
+    100%{background-position:0% 82%}
+}
+@keyframes rainbow { 
+    0%{background-position:0% 82%}
+    50%{background-position:100% 19%}
+    100%{background-position:0% 82%}
+}
+.content {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+background-color:pink;
+padding:20px;
+border:dashed 3px fuchsia;
+}
+	</style>
+</head>
+<body>
+	<div class="wrapper">
+		<div class="content">
+	<h1>poppys website leaver-smith</h1>
+	<p>i am being home schooled.</p>
+	<p>i made this my self.</p>
+	<p>p-s welcom to my website.</p>
+		</div>
+	</div>
+</body>
+</html>
